common-applications/freesky-icsl-hk-cluster/quickissue/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: openeuler-quickissue
  name: openeuler-quickissue
